[gd_scene load_steps=32 format=3 uid="uid://bebjn5n2kjwgb"]

[ext_resource type="Script" path="res://scripts/creature_notification_manager.gd" id="2_0vuyd"]
[ext_resource type="Script" path="res://scripts/creature.gd" id="2_klgk6"]
[ext_resource type="Script" path="res://scripts/creature_anim.gd" id="5_oh7gr"]
[ext_resource type="Texture2D" uid="uid://dnud16me4mso5" path="res://icons/status/sentiment_frustrated_24dp_FFFFFF_FILL1_wght300_GRAD0_opsz24.svg" id="8_cooyl"]
[ext_resource type="Texture2D" uid="uid://kma8r55lpxii" path="res://icons/status/sentiment_sad_24dp_FFFFFF_FILL1_wght300_GRAD0_opsz24.svg" id="9_xmwbg"]
[ext_resource type="Texture2D" uid="uid://cuaa2uyffvita" path="res://icons/status/droplet-fill.svg" id="10_mvvsb"]
[ext_resource type="Texture2D" uid="uid://dean3vpwpml33" path="res://images/creature_sprites/hat-0.png" id="15_eqb0u"]
[ext_resource type="SpriteFrames" uid="uid://68skicj7tsu2" path="res://resources/creatures/main_creature_sprite_frames.tres" id="15_p8q2b"]
[ext_resource type="AudioStream" uid="uid://pgmpt3uti87" path="res://sound_effects/pain3.wav" id="16_2mdbn"]
[ext_resource type="Script" path="res://scripts/pain.gd" id="16_epyie"]
[ext_resource type="Texture2D" uid="uid://ds1kv27x8e4hy" path="res://images/creature_sprites/hat-1.png" id="16_iky04"]
[ext_resource type="AudioStream" uid="uid://it0l1d864tp5" path="res://sound_effects/pain4.wav" id="17_addty"]
[ext_resource type="Texture2D" uid="uid://brslt7dhl7lmc" path="res://images/creature_sprites/hat-2.png" id="17_s111j"]
[ext_resource type="Texture2D" uid="uid://jwn24lgspht2" path="res://images/creature_sprites/glasses-0.png" id="18_52sxs"]
[ext_resource type="AudioStream" uid="uid://bux02e7112jdt" path="res://sound_effects/pain5.wav" id="18_qdg0m"]
[ext_resource type="Texture2D" uid="uid://diuhoh5vf8a6t" path="res://images/creature_sprites/glasses-1.png" id="19_a2k16"]
[ext_resource type="Texture2D" uid="uid://ch6mgp1qpwwjh" path="res://images/creature_sprites/glasses-2.png" id="20_ehttl"]
[ext_resource type="AudioStream" uid="uid://cl8pxd7pob5tr" path="res://sound_effects/hunger_low.wav" id="26_b0wvq"]
[ext_resource type="AudioStream" uid="uid://p3x28bbk45v4" path="res://sound_effects/fun_low.wav" id="27_uvaw6"]
[ext_resource type="AudioStream" uid="uid://bay1xn7u3rdq4" path="res://sound_effects/regulation_low.wav" id="28_qtceu"]
[ext_resource type="AudioStream" uid="uid://sf20qavy3mx3" path="res://sound_effects/thirst_low.wav" id="29_hivox"]
[ext_resource type="Texture2D" uid="uid://bk2tnjee2nsd3" path="res://images/creature_sprites/notif-0.png" id="34_x5sq7"]
[ext_resource type="Texture2D" uid="uid://dp33npwim2x1c" path="res://images/creature_sprites/notif-1.png" id="35_1xftg"]
[ext_resource type="Script" path="res://scripts/wiggle.gd" id="36_lmtu2"]
[ext_resource type="Texture2D" uid="uid://diulrde0gmhnl" path="res://images/creature_sprites/notif-2.png" id="36_rk862"]
[ext_resource type="Theme" uid="uid://c6pbhcyqdefqk" path="res://themes/monospace_font.tres" id="37_pguj7"]
[ext_resource type="FontFile" uid="uid://btef3ltdrleel" path="res://fonts/VCR_OSD_MONO_1.001.ttf" id="38_wb1ql"]
[ext_resource type="Texture2D" uid="uid://p0oo42fr5wrp" path="res://icons/status/lunch_dining_24dp_8B1A10_FILL0_wght500_GRAD0_opsz24-svg.svg" id="39_5380y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3t6pq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_eqb0u")
}, {
"duration": 1.0,
"texture": ExtResource("16_iky04")
}, {
"duration": 1.0,
"texture": ExtResource("17_s111j")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xmjbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_52sxs")
}, {
"duration": 1.0,
"texture": ExtResource("19_a2k16")
}, {
"duration": 1.0,
"texture": ExtResource("20_ehttl")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_o130v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_x5sq7")
}, {
"duration": 1.0,
"texture": ExtResource("35_1xftg")
}, {
"duration": 1.0,
"texture": ExtResource("36_rk862")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("2_klgk6")
dying_colour = Color(1, 0, 0, 1)
xp_required = 20000.0

[node name="Notifcations" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0vuyd")
low_food = ExtResource("26_b0wvq")
low_fun = ExtResource("27_uvaw6")
low_hp = ExtResource("28_qtceu")
low_water = ExtResource("29_hivox")
low_food_img = ExtResource("39_5380y")
low_fun_img = ExtResource("8_cooyl")
low_hp_img = ExtResource("9_xmwbg")
low_water_img = ExtResource("10_mvvsb")
cooldown_period = 30.0
notifcation_length = 10.0

[node name="STAHP" type="AudioStreamPlayer" parent="Notifcations"]
unique_name_in_owner = true
bus = &"SFX"
script = ExtResource("16_epyie")
sounds = Array[AudioStream]([ExtResource("16_2mdbn"), ExtResource("17_addty"), ExtResource("18_qdg0m")])

[node name="LowStatSounds" type="AudioStreamPlayer" parent="Notifcations"]
unique_name_in_owner = true
max_polyphony = 2
bus = &"SFX"

[node name="Sprites" type="CanvasGroup" parent="."]

[node name="Main" type="AnimatedSprite2D" parent="Sprites"]
unique_name_in_owner = true
scale = Vector2(0.225, 0.225)
sprite_frames = ExtResource("15_p8q2b")
animation = &"idle"
autoplay = "idle"
script = ExtResource("5_oh7gr")

[node name="Accessories" type="Node2D" parent="Sprites"]
script = ExtResource("2_klgk6")

[node name="Hat" type="AnimatedSprite2D" parent="Sprites/Accessories"]
visible = false
position = Vector2(-19, -127)
scale = Vector2(0.225, 0.225)
sprite_frames = SubResource("SpriteFrames_3t6pq")
autoplay = "default"
frame_progress = 0.770958

[node name="Glasses" type="AnimatedSprite2D" parent="Sprites/Accessories"]
visible = false
modulate = Color(1, 0.807843, 0.592157, 1)
position = Vector2(-7, -33)
scale = Vector2(0.225, 0.225)
sprite_frames = SubResource("SpriteFrames_xmjbo")
autoplay = "default"

[node name="NotificationBubble" type="AnimatedSprite2D" parent="Sprites"]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(-32, -185)
scale = Vector2(1.8, 1.8)
sprite_frames = SubResource("SpriteFrames_o130v")
autoplay = "default"

[node name="Icons" type="Node2D" parent="Sprites/NotificationBubble"]
editor_description = "Adds wiggle to children nodes."
position = Vector2(17.7778, 102.778)
scale = Vector2(0.555556, 0.555556)
script = ExtResource("36_lmtu2")

[node name="Example" type="Label" parent="Sprites/NotificationBubble/Icons"]
unique_name_in_owner = true
visible = false
texture_filter = 1
offset_left = -89.0
offset_top = -223.0
offset_right = 23.0
offset_bottom = -174.0
theme = ExtResource("37_pguj7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("38_wb1ql")
theme_override_font_sizes/font_size = 28
text = "THIRSTY"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Icon" type="TextureRect" parent="Sprites/NotificationBubble/Icons"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 1)
offset_left = -75.0
offset_top = -229.0
offset_right = 25.0
offset_bottom = -165.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("39_5380y")
expand_mode = 2
stretch_mode = 5

[connection signal="finished" from="Notifcations/LowStatSounds" to="Notifcations" method="_on_low_stat_sounds_finished"]
[connection signal="animation_changed" from="Sprites/Main" to="Sprites/Main" method="_on_animation_changed"]
